@@ -43,40 +43,6 @@
 #include <libxfsm/xfsm-util.h>
 
 
-GtkWidget *
-xfsm_imgbtn_new(const gchar *text, const gchar *icon, GtkWidget **label_ret)
-{
-	GtkWidget *button;
-	GtkWidget *align;
-	GtkWidget *image;
-	GtkWidget *hbox;
-  GtkWidget *label;
-
-	button = gtk_button_new();
-
-	align = gtk_alignment_new(0.5f, 0.5f, 0.0f, 0.0f);
-	gtk_container_add(GTK_CONTAINER(button), align);
-	gtk_widget_show(align);
-
-	hbox = gtk_hbox_new(FALSE, 0);
-	gtk_container_add(GTK_CONTAINER(align), hbox);
-	gtk_widget_show(hbox);
-
-	image = gtk_image_new_from_stock(icon, GTK_ICON_SIZE_BUTTON);
-	gtk_box_pack_start(GTK_BOX(hbox), image, FALSE, FALSE, 2);
-	gtk_widget_show(image);
-
-	label = gtk_label_new_with_mnemonic(text);
-	gtk_box_pack_start(GTK_BOX(hbox), label, FALSE, FALSE, 2);
-	gtk_widget_show(label);
-
-  if (label_ret != NULL)
-    *label_ret = label;
-
-	return button;
-}
-
-
 gboolean
 xfsm_start_application (gchar      **command,
                         gchar      **environment,
